[package]
name = "cartoonify"
description = "A cartoon effect with OpenCV"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sunsided/opencv-cartoon-effect"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["opencv", "cartoon", "image-processing"]
categories = ["multimedia::images"]

[features]
halftone = ["dep:rotated-grid"]

[dependencies]
opencv = { version = "0.91.3", default-features = false, features = ["imgproc", "imgcodecs", "highgui", "ximgproc"] }
rotated-grid = { version = "0.1.1", optional = true }
